--- a/src/app/components/home/download-dialog/download-dialog.component.scss
+++ b/src/app/components/home/download-dialog/download-dialog.component.scss
@@ -17,7 +17,5 @@
   flex: 1 0 auto;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
   align-items: center;
 }
