--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: 16px;
+    flex: 1 0 auto;
 }
 
 .download {
@@ -9,6 +10,10 @@
   max-width: 650px;
   margin: 16px auto;
   z-index: 10;
+  min-height: fit-content;
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 auto;
 }
 
 .logo {
@@ -21,6 +26,7 @@
   max-width: 800px;
   display: block;
   text-align: center;
+  flex: 1 0 auto;
   p {
     font-size: 1.2em;
     line-height: 1.5em;
@@ -42,7 +48,7 @@
 .dual-container {
   display: flex;
   flex-direction: row;
-  flex: 1 1 auto;
+  flex: 1 0 auto;
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-around;
